--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "version": "1.0.0",
   "author": "Dreyah <dreyah.a@gmail.com@gmail.com>",
   "dependencies": {
+    "apollo-boost": "^0.1.27",
     "gatsby": "^2.0.76",
     "gatsby-plugin-manifest": "^2.0.9",
     "gatsby-plugin-offline": "^2.0.16",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-sass": "^2.0.7",
+    "graphql": "^14.1.1",
+    "graphql-tag": "^2.10.1",
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
+    "react-apollo": "^2.4.0",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
     "react-images": "^0.5.19"
