--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "version": "1.0.0",
   "author": "Dreyah <dreyah.a@gmail.com@gmail.com>",
   "dependencies": {
-    "apollo-boost": "^0.1.27",
     "gatsby": "^2.0.76",
+    "gatsby-plugin-favicon": "^3.1.5",
     "gatsby-plugin-manifest": "^2.0.9",
     "gatsby-plugin-offline": "^2.0.16",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-sass": "^2.0.7",
+    "graphql-request": "^1.8.2",
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
-    "react-apollo": "^2.4.0",
     "react-dom": "^16.6.3",
     "react-helmet": "^5.2.0",
     "react-images": "^0.5.19"
